menus updated and v1.3

--- a/discoverirl.html
+++ b/discoverirl.html
@@ -45,12 +45,12 @@
                                      <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoverirl.html">
                                                       <i class="fa fa-credit-card"></i>
                                                       Discover Ireland</a></li>
-                                      <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
+                                    <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
                                                           <i class="fa fa-user"></i>
-                                                          Moving to ireland</a></li>
-                                      <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
-                                                              <i class="fa fa-newspaper-o"></i>
-                                                              Events</a></li>
+                                                          Moving to Ireland</a></li>
+                                    <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
+                                                          <i class="fa fa-newspaper-o"></i>
+                                                          Events</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
@@ -131,14 +131,14 @@
                                          <i class="fa fa-credit-card"></i>
                                          Discover Sri Lanka</a></li>
                                     <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoverirl.html">
-                                                 <i class="fa fa-credit-card"></i>
-                                                 Discover Ireland</a></li>
+                                                      <i class="fa fa-credit-card"></i>
+                                                      Discover Ireland</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
-                                                     <i class="fa fa-user"></i>
-                                                     Moving to Ireland</a></li>
+                                                          <i class="fa fa-user"></i>
+                                                          Moving to Ireland</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
-                                                     <i class="fa fa-newspaper-o"></i>
-                                                     Events</a></li>
+                                                          <i class="fa fa-newspaper-o"></i>
+                                                          Events</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
@@ -201,7 +201,7 @@
 
 
 
-<div style="height:500px; margin-top:0px;" class="slider img-back">
+<div style="height:500px; margin-top:0px;" class="slider img-back3">
 
 
 
@@ -218,7 +218,7 @@
           <div class="row">
                 <div class="col-sm-6">
 
-                    <img style="width: 100%;" src="assets/images/charity1.jpg">
+                    <img style="width: 100%;" src="assets/images/irl_in_india.jpg">
 
                 </div>
 
@@ -226,53 +226,77 @@
 
                    <div class="row hed">
 
-              <h2>About Us</h2>
+              <h2>Sri lankan diplomatic mission in Ireland</h2>
             </div>
 
                   <p >
-                      The mission of the Sri Lanka Association of Ireland (SlaÉire) is to provide a forum for its
-                      community to promote social, cultural, educational, and recreational activities, and to support
-                      charitable and other non-political endeavours to benefit Sri Lankan’s and friends of Sri Lanka living
-                      in Ireland. SlaÉire complements the work of other Sri Lankan associations in the country.
+                      Ireland do not have an Embassy in Sri Lanka, please contact Embassy of Ireland India. You can find answers to most of your questions by visiting the website below.
                   </p>
 
-                  <b>Vision & Mission</b>
+                  <h4>High Commission of Ireland</h4>
 
                   <ul>
-                  <li> To provide a common meeting ground for persons of Sri Lankan origin and to integrate well with the Irish community. </li>
+                    C-17 Malcha marg,<br>
+                    Chanakyapuri,<br>
+                    New Delhi - 110 021<br>
+                    Ireland<br>
+                    Tel: (0091) 11 4940 3200<br>
+                    Fax: (0091) 11 4059 1898<br><br>
 
-                  <li> To promote and perpetuate the cultural heritage of Sri Lanka amongst members of Sri Lanka Association of Ireland and the Irish community.</li>
+                    <li>Contact Embassy of Ireland India : <a href="https://www.dfa.ie/irish-embassy/india/contact-us/" target="_blank">Click here</a><br></li>
+                  </ul>
 
-                  <li> To propose measures and take action with regard to the interests and welfare of the Sri Lankan community and make representations to Irish governments and other organisations on relevant matters.</li>
+                  <br>
 
-                  <li> To organise fun raising activities and resources for donations to charities in Sri Lanka or Ireland.</li>
+                  <h4>Honorary Consulate</h4>
 
-                 <li> To assist new migrants of Sri Lankan origin arriving in Ireland providing and support towards settling.</li>
-
-                 <li> To participate as a body in matters of special interest to the Sri Lankan community in Ireland.</li>
-
-                  <li> To foster social cohesion, friendship, goodwill, peace and unity among all Sri Lankans in Ireland  .</li>
-                </ul>
+                  <ul>
+                    Mr. Manik Pereira,<br>
+                    Honorary Consul of Ireland,<br>
+                    Pership House (ONE)<br>
+                    No. 72C Bauddhaloka Mawatha<br>
+                    Colombo 04<br>
+                    Sri Lanka<br>
+                    Tel: (0094) 11 4523900<br>
+                    Fax: (0094) 11 2598187<br>
+                    Mob: (0094) 77 3936126<br>
+                    Email: <a href="mailto:nilima@pership.com">Assistant: Ms. Nilima Ranaweerasinghe</a><br><br>
+                  </ul>
                 </div>
-
-
-
-
           </div>
-               </div>
-
-
+         </div>
 
           <div class="container">
             <div class="row hed">
 
-              <h2>Our Team</h2>
+              <h2>Visit Ireland</h2>
               </div>
 
               <div class="row team">
                     <div class="col-sm-6 abut">
-                          <p>All Sri Lankans residing in Ireland and those interested in the nation of
-                            Sri Lanka belongs to Sri Lanka Association of Ireland.</p>
+                          <p>Ireland may be small but it packs a punch and its relaxed atmosphere and friendly
+                            locals make traveling the Emerald Isle a pleasure. With its wide expanses of rich
+                            green fields and many mountains, lakes, coastlines and islands; the landscape of
+                            Ireland is inspiringly beautiful if we do say so ourselves.</p>
+
+                            <p>Ireland is also known for its history and there are plenty of medieval cities
+                              and walled towns to be enjoyed too; and the best way to travel the country is by
+                              car so you can get off the beaten track and explore more of what Ireland offers beyond the guidebooks.</p>
+
+                            <p>The gorgeous landscapes, the greenery, the mountains, the fields, the countryside, even
+                              Dublin has beautiful canals to admire and more. Wild Atlantic Way was named one of the
+                               world’s top road trips, and this was competing against 50 other road trip destinations!</p>
+
+                            <p>You can find more information about touring in Ireland using below websites,
+                            </p>
+                            <li>Discover Ireland : <a href="https://www.discoverireland.ie/" target="_blank">Click here</a><br></li>
+                            <li>Lonely Planet : <a href="https://www.lonelyplanet.com/ireland" target="_blank">Click here</a></li>
+                            <li>Ministry of Tourism : <a href="https://www.gov.ie/en/organisation/department-of-transport-tourism-and-sport/" target="_blank">Click here</a></li>
+                    </div>
+                    <div class="col-sm-6">
+
+                        <img style="width: 100%;" src="assets/images/irl_city.jpg">
+
                     </div>
               </div>
           </div>
