--- a/discoversl.html
+++ b/discoversl.html
@@ -47,10 +47,10 @@
                                                       Discover Ireland</a></li>
                                       <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
                                                           <i class="fa fa-user"></i>
-                                                          Moving to ireland</a></li>
+                                                          Moving to Ireland</a></li>
                                       <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
-                                                              <i class="fa fa-newspaper-o"></i>
-                                                              Events</a></li>
+                                                          <i class="fa fa-newspaper-o"></i>
+                                                          Events</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
@@ -130,15 +130,15 @@
                                      <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoversl.html">
                                          <i class="fa fa-credit-card"></i>
                                          Discover Sri Lanka</a></li>
-                                    <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoverirl.html">
-                                                 <i class="fa fa-credit-card"></i>
-                                                 Discover Ireland</a></li>
-                                    <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
-                                                     <i class="fa fa-user"></i>
-                                                     Moving to Ireland</a></li>
-                                    <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
-                                                     <i class="fa fa-newspaper-o"></i>
-                                                     Events</a></li>
+                                     <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoverirl.html">
+                                                      <i class="fa fa-credit-card"></i>
+                                                      Discover Ireland</a></li>
+                                      <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
+                                                          <i class="fa fa-user"></i>
+                                                          Moving to Ireland</a></li>
+                                      <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
+                                                          <i class="fa fa-newspaper-o"></i>
+                                                          Events</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
@@ -201,7 +201,7 @@
 
 
 
-<div style="height:500px; margin-top:0px;" class="slider img-back">
+<div style="height:500px; margin-top:0px;" class="slider img-back2">
 
 
 
@@ -218,7 +218,7 @@
           <div class="row">
                 <div class="col-sm-6">
 
-                    <img style="width: 100%;" src="assets/images/charity1.jpg">
+                    <img style="width: 100%;" src="assets/images/sl-embassy.jpg">
 
                 </div>
 
@@ -226,53 +226,83 @@
 
                    <div class="row hed">
 
-              <h2>About Us</h2>
+              <h2>Sri lankan diplomatic mission in Ireland</h2>
             </div>
 
                   <p >
-                      The mission of the Sri Lanka Association of Ireland (SlaÉire) is to provide a forum for its
-                      community to promote social, cultural, educational, and recreational activities, and to support
-                      charitable and other non-political endeavours to benefit Sri Lankan’s and friends of Sri Lanka living
-                      in Ireland. SlaÉire complements the work of other Sri Lankan associations in the country.
+                      Sri Lanka do not have an Embassy in Ireland, please contact Embassy of Sri Lanka U.K. You can find answers to most of your questions by visiting the website below.
                   </p>
 
-                  <b>Vision & Mission</b>
+                  <h4>High Commission of Sri Lanka</h4>
 
                   <ul>
-                  <li> To provide a common meeting ground for persons of Sri Lankan origin and to integrate well with the Irish community. </li>
+                    No.13,<br>
+                    Hyde Park Gardens,<br>
+                    London<br>
+                    W2 2LU<br>
+                    United Kingdom<br>
+                    Tel: (0044) 207 262 1841<br>
+                    Fax: (0044) 207 262 7970<br>
+                    Email: <a href="mailto:mail@slhc-london.co.uk">mail@slhc-london.co.uk</a><br><br>
 
-                  <li> To promote and perpetuate the cultural heritage of Sri Lanka amongst members of Sri Lanka Association of Ireland and the Irish community.</li>
+                    <li>Apply online visa for Sri Lanka : <a href="http://www.eta.gov.lk/slvisa/" target="_blank">Click here</a><br></li>
+                    <li>High Commission of Sri Lanka in the United Kingdom : <a href="https://srilankahc.uk/" target="_blank">Click here</a></li>
+                  </ul>
 
-                  <li> To propose measures and take action with regard to the interests and welfare of the Sri Lankan community and make representations to Irish governments and other organisations on relevant matters.</li>
+                  <br>
 
-                  <li> To organise fun raising activities and resources for donations to charities in Sri Lanka or Ireland.</li>
+                  <h4>Honorary Consulate</h4>
 
-                 <li> To assist new migrants of Sri Lankan origin arriving in Ireland providing and support towards settling.</li>
-
-                 <li> To participate as a body in matters of special interest to the Sri Lankan community in Ireland.</li>
-
-                  <li> To foster social cohesion, friendship, goodwill, peace and unity among all Sri Lankans in Ireland  .</li>
-                </ul>
+                  <ul>
+                    Mrs. Darina Allen,<br>
+                    Ballymaloe Cookery School Shanagarry,<br>
+                    East Cork<br>
+                    P25 R274<br>
+                    Ireland<br>
+                    Tel: (00353) 21 4646785 <br>
+                    Email: <a href="mailto:darina@cookingisfun.ie">darina@cookingisfun.ie</a><br><br>
+                  </ul>
                 </div>
-
-
-
-
           </div>
-               </div>
-
-
+         </div>
 
           <div class="container">
             <div class="row hed">
 
-              <h2>Our Team</h2>
+              <h2>Visit Sri Lanka</h2>
               </div>
 
               <div class="row team">
                     <div class="col-sm-6 abut">
-                          <p>All Sri Lankans residing in Ireland and those interested in the nation of
-                            Sri Lanka belongs to Sri Lanka Association of Ireland.</p>
+                          <p>Discover the rich history and the unique culture of the island nation of Sri Lanka.
+                            Admire its beautiful landscapes, ancient cities and temples, amazing wildlife and
+                            relaxing beaches, as you get to know the people and places of this fascinating country.</p>
+
+                            <p>With wonders at every turn, you will take in a whole host of UNESCO World Heritage
+                              Sites including the walled city of Galle, the ancient city of Polonnaruwa and the
+                              spectacular Lion's Rock fortress in Sigiriya. A trip to the ancient city of Anuradhapura
+                              will be a particular highlight, with its temples, landscaped gardens, ceremonial baths
+                              and the sacred ‘Bo Tree’, the oldest known tree in the world.</p>
+                            <p>Immerse yourself in local life as you visit regional villages, take a ride in a tuk tuk,
+                              and enjoy a traditional Sri Lankan cultural performance. Marvel at the country’s incredible
+                              wildlife with a trip to an Elephant orphanage and a safari game drive in the Yala
+                              National Park, where elephants, leopards, water buffalo, crocodiles, sea turtles
+                              and many species of birds are among the inhabitants.  And to top it all off, you can
+                              enjoy some relaxation time on one of the island’s stunning sandy beaches.</p>
+                            <p>Threfore, come away with an understanding of why Arab traders called the island “Serendib”—a
+                              name that gave English speakers the word “serendipity.” Discover the beauty of Sri
+                              Lanka and experience an exceptional excursion in Sri Lanka and enjoy a once-in–lifetime vacation.
+                            </p>
+                            <p>You can find more information about touring in Sri Lanka using below websites,
+                            </p>
+                            <li>Sri Lanka Tourism : <a href="https://www.srilanka.travel/" target="_blank">Click here</a><br></li>
+                            <li>Lonely Planet : <a href="https://www.lonelyplanet.com/sri-lanka" target="_blank">Click here</a></li>
+                            <li>Ministry of Tourism : <a href="http://www.tourismmin.gov.lk/" target="_blank">Click here</a></li>
+                    </div>
+                    <div class="col-sm-6">
+
+                        <img style="width: 100%;" src="assets/images/sl_hotel.jpg">
+
                     </div>
               </div>
           </div>
