--- a/index.html
+++ b/index.html
@@ -39,18 +39,21 @@
                                        <i class="fa fa-shield"></i>
                                          About Us</a></li>
 
-                                     <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="supportus.html">
+                                     <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoversl.html">
                                          <i class="fa fa-credit-card"></i>
-                                         Support XX</a></li>
+                                         Discover Sri Lanka</a></li>
+                                     <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoverirl.html">
+                                             <i class="fa fa-credit-card"></i>
+                                             Discover Ireland</a></li>
+                                    <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
+                                                 <i class="fa fa-user"></i>
+                                                 Moving to Ireland</a></li>
+                                    <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
+                                                     <i class="fa fa-newspaper-o"></i>
+                                                     Events</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="testimonial.html">
-                                         <i class="fa fa-user"></i>
-                                         Testimonials</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="news.html">
-                                         <i class="fa fa-newspaper-o"></i>
-                                         News</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm7"  onclick="changeSelect(7)"  > <a href="contactus.html">
                                         <i class=" fa fa-map-marker"></i>
                                         Contact Us</a></li>
@@ -63,7 +66,7 @@
                 <div class="mobile-head shado-1 visible-xs">
                         <img style="width:50px;" class="logo" src="assets/images/logo.png">
                             <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
-                            <b style="margin-left: 4px;">social awareness foundation</b>
+                            <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
 
                             <i onclick="showSM()" class="fa fa-navicon smal-menu-ico cp"></i>
                 </div>
@@ -98,7 +101,7 @@
 
                                             <div class="exu">
                                                <i class="fa fa-phone"></i> :  +353 123456789
-                                                <i style="margin-left: 30px;" class="fa fa-envelope"></i> :  infoslaeire@gmail.com
+                                                <i style="margin-left: 30px;" class="fa fa-envelope"></i> :  <a href="mailto:infoslaeire@gmail.com">infoslaeire@gmail.com</a>
                                             </div>
                                   </div>
 
@@ -124,18 +127,21 @@
                                        <i class="fa fa-shield"></i>
                                          About Us</a></li>
 
-                                     <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="supportus.html">
+                                     <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoversl.html">
                                          <i class="fa fa-credit-card"></i>
-                                         Support XX2</a></li>
+                                         Discover Sri Lanka</a></li>
+                                    <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="discoverirl.html">
+                                                 <i class="fa fa-credit-card"></i>
+                                                 Discover Ireland</a></li>
+                                    <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
+                                                     <i class="fa fa-user"></i>
+                                                     Moving to Ireland</a></li>
+                                    <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
+                                                         <i class="fa fa-newspaper-o"></i>
+                                                         Events</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="testimonial.html">
-                                         <i class="fa fa-user"></i>
-                                         Testimonials</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="news.html">
-                                         <i class="fa fa-newspaper-o"></i>
-                                         News</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm7"  onclick="changeSelect(7)"  > <a href="contactus.html">
                                         <i class=" fa fa-map-marker"></i>
                                         Contact Us</a></li>
@@ -235,7 +241,7 @@
   <div class="item active">
       <img src="assets/images/b1.jpg" alt="...">
       <div class="carousel-caption">
-            <h2 class="fevf">SlaÉire provide a forum for its community to promote</h2>
+            <h2 class="fevf">Provide a forum for its community to promote</h2>
           <!--h2 class="fevf">We provide Eduction to 250 Students Join with us </h2-->
           <strong class="ssstitle">social, cultural, educational, and recreational activities.</strong>
       </div>
@@ -274,8 +280,8 @@
                 <div class="col-sm-4">
                     <div class="widget-box-inner">
 <div class="round"><a class="inner" href="#"><i class="fa fa-users"></i></a></div>
-<h2>Join Volunteer</h2>
-<p>Since 13-3-2015, Sri Lanka Association of Ireland (SlaÉire) has placed 19,869 volunteers in 22 programs around the world alongside empowering grassroots community projects. </p>
+<h2>Our Community</h2>
+<p>SlaÉire provide a forum for its community to promote social, cultural, educational, and recreational activities, and to support charitable and other non-political endeavours to benefit Sri Lankan’s and friends of Sri Lanka living in Ireland. </p>
 </div>
 
                 </div>
@@ -285,8 +291,8 @@
 
                   <div class="widget-box-inner">
 <div class="round"><a class="inner" href="#"><i class="fa fa-globe"></i></a></div>
-<h2>Our Campaigns</h2>
-<p>Since the launch of the campaign in 13-3-2015, we come a long way in terms of raising awareness of charitable gifts in wills amongst both the UK public and Will making professionals.</p>
+<h2>Discover Ireland</h2>
+<p>This is the perfect place for expats living in Ireland and people thinking about moving to Ireland to explore opportunities in Ireland.</p>
 </div>
 
 
@@ -298,10 +304,10 @@
               <div class="col-sm-4">
 
 
-                  <div class="widget-box-inner">
+                  <div  class="widget-box-inner">
 <div class="round"><a class="inner" href="#"><i class="fa fa-user"></i></a></div>
-<h2>Biography</h2>
-<p>This Deed of declaration of trust made on 13th day of March 2015 by Mr.Kingsly. With the sole aim of social charitable, religious Promotional, educational and cultural activities.  </p>
+<h2>Discover Sri Lanka</h2>
+<p>Planning your next holiday? Discover the rich history and the unique culture of the island nation of Sri Lanka.  </p>
 </div>
 
 
@@ -574,122 +580,111 @@
 
 
 
-  <!---************************** Body content Ends Here ***************-->
+ <!---************************** Body content Ends Here ***************-->
 
 
-      <footer style="margin-top:25px;">
+     <footer style="margin-top:25px;">
 
-    <div class="container foot-cont">
-        <div class="col-sm-4">
-            <b>About Us</b>
-            <p>
-            Thankam Social Awareness Foundation Trust is for the purpose of carrying out the objects
+   <div class="container foot-cont">
+       <div class="col-sm-4">
+           <b>About Us</b>
+           <p>
+           SlaÉire is to provide a forum for its community to promote social, cultural, educational,
+           and recreational activities, and to support charitable and other non-political endeavours
+           to benefit Sri Lankan’s and friends of Sri Lanka living in Ireland.
+           </p>
+       </div>
+        <div class="col-sm-3">
+           <b></b>
 
-hereinafter set out without any distinction of caste, color or creed. It has no profit motive.  With the sole
+            <p style="font-size:15px;"><br>
 
-aim of involving in social charitable, religious, promotional, educational and cultural.
+               <br>
+
             </p>
-        </div>
-         <div class="col-sm-3">
-            <b>Address</b>
 
-             <p style="font-size:15px;">Sri Lanka Association of Ireland (SlaÉire)<br>
+       </div>
 
-              1st Floor, Opp Padma Hospital <br>
+       <div class="col-sm-3">
+          <b>Contact Us</b>
 
-                  Near Bus Stand, Thiruvattar, <br>
+           <p style="font-size:15px;">Email : <a href="mailto:infoslaeire@gmail.com">infoslaeire@gmail.com</a><br>
+              <br>
 
-                  K.K District, Tamilnadu <br>
-
-                email:infoslaeire@gmail.com
- <br>
-
-             </p>
-
-        </div>
-
-        <div class="col-sm-5 scmsug">
-            <b style="text-align:center; width:100%; margin-left:30%;">Working Hours</b>
-            <ul class="wh">
-                <li>Monday   <b> 9.30 AM to 6.00PM</b></li>
-                <li>Tuesday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Wednesday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Thursday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Friday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Saturday  <b> 9.30 AM to 6.00PM</b></li>
-            </ul>
-        </div>
-
-
-    </div>
-
-     <div class=" smarti">
-            <div class="container">
-            <p>All Rights Reserved &copy; Sri Lanka Association of Ireland (SlaÉire)
-
-                <i class="fa fa-twitter fico-s hidden-xs"></i>
-                 <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
-                 <i class="fa fa-google-plus fico-s hidden-xs"></i>
-                 <i class="fa fa-facebook fico-s hidden-xs"></i>
-
-
-
-
-
-
-
-                </p>
-
-
-
-         </div>
-        </div>
-
-    </footer-->
-
-
-
-
-
-
-
+           </p>
 
       </div>
 
 
+   </div>
 
+    <div class=" smarti">
+           <div class="container">
+           <p>All Rights Reserved &copy; Sri Lanka Association of Ireland (SlaÉire)
 
-      <div style="z-index: 999999; margin-top: 10%;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div style="width:450px;" class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Donate Now</h4>
-      </div>
-      <div style="padding: 20px;" class="modal-body">
-
-        <b>Indian Bank, Thiruvattar.</b><br>
-        <b>IFSC Code:IDIB000T155.</b><br>
-        <b>MICR Code:629019013.</b><br>
-        <b>Name:Kingsly T.</b><br>
-        <b>a/c No:6093117224.</b><br>
-      </div>
-
-    </div>
-  </div>
-</div>
+               <i class="fa fa-twitter fico-s hidden-xs"></i>
+                <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
+                <i class="fa fa-google-plus fico-s hidden-xs"></i>
+                <i class="fa fa-facebook fico-s hidden-xs"></i>
 
 
 
 
 
-  </body>
 
 
-<script src="assets/js/angular.min.js"></script>
-<script src="assets/js/angular-ui-router.min.js"></script>
-<script src="assets/js/jquery-1.11.3.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
-<script src="assets/js/lightbox-plus-jquery.min.js"></script>
-<script src="assets/js/script.js"></script>
-</html>
+               </p>
+
+
+
+        </div>
+       </div>
+
+   </footer>
+
+
+
+
+
+
+
+
+     </div>
+
+
+
+
+     <div style="z-index: 999999; margin-top: 10%;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+ <div style="width:450px;" class="modal-dialog" role="document">
+   <div class="modal-content">
+     <div class="modal-header">
+       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+       <h4 class="modal-title" id="myModalLabel">Donate Now</h4>
+     </div>
+     <div style="padding: 20px;" class="modal-body">
+
+       <b>Indian Bank, Thiruvattar.</b><br>
+       <b>IFSC Code:IDIB000T155.</b><br>
+       <b>MICR Code:629019013.</b><br>
+       <b>Name:Kingsly T.</b><br>
+       <b>a/c No:6093117224.</b><br>
+     </div>
+
+   </div>
+ </div>
+ </div>
+
+
+
+
+
+ </body>
+
+
+ <script src="assets/js/angular.min.js"></script>
+ <script src="assets/js/angular-ui-router.min.js"></script>
+ <script src="assets/js/jquery-1.11.3.min.js"></script>
+ <script src="assets/js/bootstrap.js"></script>
+ <script src="assets/js/lightbox-plus-jquery.min.js"></script>
+ <script src="assets/js/script.js"></script>
+ </html>
