--- a/movingtoirl.html
+++ b/movingtoirl.html
@@ -18,8 +18,7 @@
   <body ng-app="thankam">
 
 
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0" nonce="mLNvn0TO"></script>
+
 
 
 
@@ -66,8 +65,8 @@
 
                 <div class="mobile-head shado-1 visible-xs">
                         <img style="width:50px;" class="logo" src="assets/images/logo.png">
-                            <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
-                            <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
+                        <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
+                        <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
 
                             <i onclick="showSM()" class="fa fa-navicon smal-menu-ico cp"></i>
                 </div>
@@ -81,8 +80,8 @@
                               <div class="container">
                                 <div style="height: 94px; overflow: hidden" class="col-md-4 col-sm-12">
                                      <img style="width:90px;" class="logo" src="assets/images/logo.png">
-                                    <h1 style="width:70%">SlaÉire</h1>
-                                     <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
+                                     <h1 style="width:70%">SlaÉire</h1>
+                                      <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
                                  </div>
                                   <div style="height: 94px; overflow: hidden"  class="col-md-8 hidden-sm">
 
@@ -199,10 +198,6 @@
 
 
 <div  class="container-fluid sldddd">
-      <div class="map">
-<iframe src="https://maps.google.com/maps?q=dublin%2C%20ireland&t=&z=13&ie=UTF8&iwloc=&output=embed" style="width:100%;" height="450" frameborder="0" style="border:0"></iframe>
-
-      </div>
 
 
 
@@ -210,89 +205,75 @@
 
 
 
-          <div class="container tmon row">
+
+          <div class="container tmon">
+            <div class="row hed">
+            </div>
 
 
 
 
 
 
-
-              <div class="col-sm-6">
+              <div class="col-sm-9">
                 <div class="row">
 
-                <div class="row hed">
+                  <div class="col-sm-3">
+                      <img src="assets/images/tm1.jpg">
 
-                  <h5>Please let us know your ideas and suggestions to improve SlaÉire - </h5>
+                  </div>
+                  <div class="col-sm-9">
+                       <b>Youth Unlimited</b>
+                      <p>I'd like to say a big word of thanks to your beautiful and amazing people! I'm so encouraged by people like yourselves who allow us to continue to do what we do. You enjoyed doing it and I did too!</p>
+
+                  </div>
+
+
                 </div>
 
 
-                  <div style="height: 370px;  min-width: 300px" class="filter shado-2 inner-cint">
-                    <b> <i class="fa fa-send"></i> ⁠</b>
 
-                    <table style="width:100%;">
-                        <tbody><tr>
-                            <td><i class="fa fa-user"></i></td>
-                            <td><input class="form-control input-sm" placeholder="Name" type="text"> </td>
-                        </tr>
+                <div style="margin-top: 20px;" class="row">
 
+                  <div class="col-sm-3">
+                      <img src="assets/images/karnataka_rural.jpg">
 
+                  </div>
+                  <div class="col-sm-9">
+                       <b>Raising the Village</b>
+                      <p>Thank you so much for a remarkable evening. As always, we greatly appreciate the opportunity to present and receive funding from The Funding Network. I am especially grateful for the coaching and support from TFN. It clearly made a huge difference :) I look forward to attending future events as a participant and joining this truly great movement. Thank you again.</p>
 
+                  </div>
 
-
-
-                        <tr>
-                            <td><i class="fa fa-phone"></i></td>
-                            <td><input class="form-control input-sm" placeholder="Email Address" type="text"> </td>
-                        </tr>
-
-
-
-
-                        <tr>
-                            <td><i class="fa fa-phone"></i></td>
-                            <td><input class="form-control input-sm" placeholder="Mobile No" type="text"> </td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa fa-envelope"></i></td>
-                            <td>
-                                <textarea style="height: 60px !important;" class="form-control ctxtar" placeholder="Your Message"></textarea>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td><button class="btn btn-success cust" style="width: 100%">
-                                Send</button> </td>
-                        </tr>
-
-                        </tbody></table>
 
                 </div>
 
 
+                <div style="margin-top: 20px;" class="row">
 
+                  <div class="col-sm-3">
+                      <img src="assets/images/1-111.jpg">
+
+                  </div>
+                  <div class="col-sm-9">
+                       <b>Street Kids International</b>
+                      <p>I'd like to say a big word of thanks to your beautiful and amazing people! I'm so encouraged by people like yourselves who allow us to continue to do what we do. You enjoyed doing it and I did too!</p>
+
+                  </div>
 
 
                 </div>
+
 
               </div>
 
 
 
 
+               <!--div class="col-sm-3">
 
-
-
-
-               <div  style="padding: 10% !important" class="col-sm-6 col-xs-12 addr">
-
-
-                 <h5>Follow us on Facebook - </h5><br>
-
-             <div class="fb-page" data-href="https://www.facebook.com/SlaEire/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SlaEire/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SlaEire/">Sri Lanka Association of Ireland - SlaÉire</a></blockquote></div>
-
-
-           </div>
+                <img style="wiidth:100%;" src="assets/images/1082059559.jpeg">
+              </div-->
 
 
 
