--- a/supportus.html
+++ b/supportus.html
@@ -45,10 +45,10 @@
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="testimonial.html">
+                                     <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
                                          <i class="fa fa-user"></i>
                                          Testimonials</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="news.html">
+                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
                                          <i class="fa fa-newspaper-o"></i>
                                          News</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm7"  onclick="changeSelect(7)"  > <a href="contactus.html">
@@ -61,9 +61,9 @@
                       </div>
 
                 <div class="mobile-head shado-1 visible-xs">
-                        <img style="width:50px;" class="logo" src="assets/images/logo.jpg">
+                        <img style="width:50px;" class="logo" src="assets/images/logo.png">
                             <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
-                            <b style="margin-left: 4px;">social awareness foundation</b>
+                            <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
 
                             <i onclick="showSM()" class="fa fa-navicon smal-menu-ico cp"></i>
                 </div>
@@ -76,9 +76,9 @@
 
                               <div class="container">
                                 <div style="height: 94px; overflow: hidden" class="col-md-4 col-sm-12">
-                                     <img style="width:90px;" class="logo" src="assets/images/logo.jpg">
+                                     <img style="width:90px;" class="logo" src="assets/images/logo.png">
                                     <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
-                                     <b style="margin-left: 4px;">social awareness foundation</b>
+                                     <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
                                  </div>
                                   <div style="height: 94px; overflow: hidden"  class="col-md-8 hidden-sm">
 
@@ -130,10 +130,10 @@
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="testimonial.html">
+                                     <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="movingtoirl.html">
                                          <i class="fa fa-user"></i>
                                          Testimonials</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="news.html">
+                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
                                          <i class="fa fa-newspaper-o"></i>
                                          News</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm7"  onclick="changeSelect(7)"  > <a href="contactus.html">
@@ -363,122 +363,111 @@
 
 
 
-  <!---************************** Body content Ends Here ***************-->
+ <!---************************** Body content Ends Here ***************-->
 
 
-      <footer style="margin-top:25px;">
+     <footer style="margin-top:25px;">
 
-    <div class="container foot-cont">
-        <div class="col-sm-4">
-            <b>About Us</b>
-            <p>
-            Thankam Social Awareness Foundation Trust is for the purpose of carrying out the objects
+   <div class="container foot-cont">
+       <div class="col-sm-4">
+           <b>About Us</b>
+           <p>
+           SlaÉire is to provide a forum for its community to promote social, cultural, educational,
+           and recreational activities, and to support charitable and other non-political endeavours
+           to benefit Sri Lankan’s and friends of Sri Lanka living in Ireland.
+           </p>
+       </div>
+        <div class="col-sm-3">
+           <b></b>
 
-hereinafter set out without any distinction of caste, color or creed. It has no profit motive.  With the sole
+            <p style="font-size:15px;"><br>
 
-aim of involving in social charitable, religious, promotional, educational and cultural.
+               <br>
+
             </p>
-        </div>
-         <div class="col-sm-3">
-            <b>Address</b>
 
-             <p style="font-size:15px;">Sri Lanka Association of Ireland (SlaÉire)<br>
+       </div>
 
-              1st Floor, Opp Padma Hospital <br>
+       <div class="col-sm-3">
+          <b>Contact Us</b>
 
-                  Near Bus Stand, Thiruvattar, <br>
+           <p style="font-size:15px;">Email : infoslaeire@gmail.com<br>
+              <br>
 
-                  K.K District, Tamilnadu <br>
-
-                email:infoslaeire@gmail.com
- <br>
-
-             </p>
-
-        </div>
-
-        <div class="col-sm-5 scmsug">
-            <b style="text-align:center; width:100%; margin-left:30%;">Working Hours</b>
-            <ul class="wh">
-                <li>Monday   <b> 9.30 AM to 6.00PM</b></li>
-                <li>Tuesday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Wednesday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Thursday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Friday  <b> 9.30 AM to 6.00PM</b></li>
-                 <li>Saturday  <b> 9.30 AM to 6.00PM</b></li>
-            </ul>
-        </div>
-
-
-    </div>
-
-     <div class=" smarti">
-            <div class="container">
-            <p>All Rights Reserved &copy; Sri Lanka Association of Ireland (SlaÉire)
-
-                <i class="fa fa-twitter fico-s hidden-xs"></i>
-                 <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
-                 <i class="fa fa-google-plus fico-s hidden-xs"></i>
-                 <i class="fa fa-facebook fico-s hidden-xs"></i>
-
-
-
-
-
-
-
-                </p>
-
-
-
-         </div>
-        </div>
-
-    </footer>
-
-
-
-
-
-
-
+           </p>
 
       </div>
 
 
+   </div>
 
+    <div class=" smarti">
+           <div class="container">
+           <p>All Rights Reserved &copy; Sri Lanka Association of Ireland (SlaÉire)
 
-      <div style="z-index: 999999; margin-top: 10%;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div style="width:450px;" class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Donate Now</h4>
-      </div>
-      <div style="padding: 20px;" class="modal-body">
-
-        <b>Indian Bank, Thiruvattar.</b><br>
-        <b>IFSC Code:IDIB000T155.</b><br>
-        <b>MICR Code:629019013.</b><br>
-        <b>Name:Kingsly T.</b><br>
-        <b>a/c No:6093117224.</b><br>
-      </div>
-
-    </div>
-  </div>
-</div>
+               <i class="fa fa-twitter fico-s hidden-xs"></i>
+                <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
+                <i class="fa fa-google-plus fico-s hidden-xs"></i>
+                <i class="fa fa-facebook fico-s hidden-xs"></i>
 
 
 
 
 
-  </body>
 
 
-<script src="assets/js/angular.min.js"></script>
-<script src="assets/js/angular-ui-router.min.js"></script>
-<script src="assets/js/jquery-1.11.3.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
-<script src="assets/js/lightbox-plus-jquery.min.js"></script>
-<script src="assets/js/script.js"></script>
-</html>
+               </p>
+
+
+
+        </div>
+       </div>
+
+   </footer>
+
+
+
+
+
+
+
+
+     </div>
+
+
+
+
+     <div style="z-index: 999999; margin-top: 10%;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+ <div style="width:450px;" class="modal-dialog" role="document">
+   <div class="modal-content">
+     <div class="modal-header">
+       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+       <h4 class="modal-title" id="myModalLabel">Donate Now</h4>
+     </div>
+     <div style="padding: 20px;" class="modal-body">
+
+       <b>Indian Bank, Thiruvattar.</b><br>
+       <b>IFSC Code:IDIB000T155.</b><br>
+       <b>MICR Code:629019013.</b><br>
+       <b>Name:Kingsly T.</b><br>
+       <b>a/c No:6093117224.</b><br>
+     </div>
+
+   </div>
+ </div>
+ </div>
+
+
+
+
+
+ </body>
+
+
+ <script src="assets/js/angular.min.js"></script>
+ <script src="assets/js/angular-ui-router.min.js"></script>
+ <script src="assets/js/jquery-1.11.3.min.js"></script>
+ <script src="assets/js/bootstrap.js"></script>
+ <script src="assets/js/lightbox-plus-jquery.min.js"></script>
+ <script src="assets/js/script.js"></script>
+ </html>
