--- a/testimonial.html
+++ b/testimonial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Sri Lanka Association of Ireland (SlaÉire)</title>
+    <title>Thankam Foundation</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet"/>
@@ -48,7 +48,7 @@
                                      <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="testimonial.html">
                                          <i class="fa fa-user"></i>
                                          Testimonials</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="news.html">
+                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
                                          <i class="fa fa-newspaper-o"></i>
                                          News</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm7"  onclick="changeSelect(7)"  > <a href="contactus.html">
@@ -61,9 +61,9 @@
                       </div>
 
                 <div class="mobile-head shado-1 visible-xs">
-                        <img style="width:50px;" class="logo" src="assets/images/logo.jpg">
-                            <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
-                            <b style="margin-left: 4px;">social awareness foundation</b>
+                        <img style="width:50px;" class="logo" src="assets/images/logo.png">
+                            <h1 style="width:70%">Thankam Foundation</h1>
+                            <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
 
                             <i onclick="showSM()" class="fa fa-navicon smal-menu-ico cp"></i>
                 </div>
@@ -76,9 +76,9 @@
 
                               <div class="container">
                                 <div style="height: 94px; overflow: hidden" class="col-md-4 col-sm-12">
-                                     <img style="width:90px;" class="logo" src="assets/images/logo.jpg">
-                                    <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
-                                     <b style="margin-left: 4px;">social awareness foundation</b>
+                                     <img style="width:90px;" class="logo" src="assets/images/logo.png">
+                                    <h1 style="width:70%">Thankam Foundation</h1>
+                                     <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
                                  </div>
                                   <div style="height: 94px; overflow: hidden"  class="col-md-8 hidden-sm">
 
@@ -97,8 +97,8 @@
                                             </ul>
 
                                             <div class="exu">
-                                               <i class="fa fa-phone"></i> :  +353 123456789
-                                                <i style="margin-left: 30px;" class="fa fa-envelope"></i> :  infoslaeire@gmail.com
+                                               <i class="fa fa-phone"></i> :  +91 9442719300
+                                                <i style="margin-left: 30px;" class="fa fa-envelope"></i> :  info@thankamfoundation.org
                                             </div>
                                   </div>
 
@@ -133,7 +133,7 @@
                                      <li onclick="hideSM()" class="mom" id="mm5" onclick="changeSelect(5)" > <a href="testimonial.html">
                                          <i class="fa fa-user"></i>
                                          Testimonials</a></li>
-                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="news.html">
+                                     <li onclick="hideSM()" class="mom" id="mm6" onclick="changeSelect(6)" > <a href="events.html">
                                          <i class="fa fa-newspaper-o"></i>
                                          News</a></li>
                                     <li onclick="hideSM()" class="mom" id="mm7"  onclick="changeSelect(7)"  > <a href="contactus.html">
@@ -330,7 +330,7 @@
         <div class="col-sm-4">
             <b>About Us</b>
             <p>
-            Thankam Social Awareness Foundation Trust is for the purpose of carrying out the objects
+            Thankam Sri Lanka Association of Ireland Trust is for the purpose of carrying out the objects
 
 hereinafter set out without any distinction of caste, color or creed. It has no profit motive.  With the sole
 
@@ -340,7 +340,7 @@ aim of involving in social charitable, religious, promotional, educational and c
          <div class="col-sm-3">
             <b>Address</b>
 
-             <p style="font-size:15px;">Sri Lanka Association of Ireland (SlaÉire)<br>
+             <p style="font-size:15px;">Thankam Foundation<br>
 
               1st Floor, Opp Padma Hospital <br>
 
@@ -348,7 +348,7 @@ aim of involving in social charitable, religious, promotional, educational and c
 
                   K.K District, Tamilnadu <br>
 
-                email:infoslaeire@gmail.com
+                email:info@thankamfoundation.org
  <br>
 
              </p>
@@ -372,7 +372,7 @@ aim of involving in social charitable, religious, promotional, educational and c
 
      <div class=" smarti">
             <div class="container">
-            <p>All Rights Reserved &copy; Sri Lanka Association of Ireland (SlaÉire)
+            <p>All Rights Reserved &copy; Thankam Foundation | Designed &amp; Developed By Smarteye
 
                 <i class="fa fa-twitter fico-s hidden-xs"></i>
                  <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
